Remove process.exit to prevent server crash on Vercel

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ JWT_SECRET=your_jwt_secret_here
 # Stripe API Key (if using payments)
 STRIPE_API_KEY=your_stripe_key_here
 
+git remote add origin https://github.com/VarunGmBrights/backen.git
+
