--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
         {
-            "src": "api/index.js",
-            "use":"@vercel/node"
+            "src": "api/vercel.js",
+            "use": "@vercel/node"
         }
     ],
-    "routes":[
+    "routes": [
         {
             "src": "/(.*)",
-            "dest":"api/index.js"
+            "dest": "api/vercel.js"
         }
     ]
 }
